--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "backend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev:server": "ts-node ./src/index.ts",
-    "dev:worker": "ts-node ./src/index-worker.ts",
-    "dev": "concurrently yarn:dev:*",
-    "build": "tsc",
-    "start:server": "node ./dist/index.js",
-    "start:worker": "node ./dist/index-worker.js",
-    "start": "concurrently yarn:start:*",
-    "migration:generate": "ts-node migration generate",
-    "migration:run": "ts-node migration run",
-    "migration:revert": "ts-node migration revert"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.370.0",
-    "@aws-sdk/lib-storage": "^3.370.0",
-    "@vendure/admin-ui-plugin": "2.0.3",
-    "@vendure/asset-server-plugin": "2.0.3",
-    "@vendure/core": "2.0.3",
-    "@vendure/email-plugin": "2.0.3",
-    "dotenv": "16.3.1",
-    "fs": "^0.0.1-security",
-    "pg": "8.11.1",
-    "typescript": "4.9.5"
-  },
-  "devDependencies": {
-    "concurrently": "8.2.0",
-    "ts-node": "10.9.1"
-  }
+	"name": "backend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev:server": "ts-node ./src/index.ts",
+		"dev:worker": "ts-node ./src/index-worker.ts",
+		"dev": "concurrently yarn:dev:*",
+		"build": "tsc",
+		"start:server": "node ./dist/index.js",
+		"start:worker": "node ./dist/index-worker.js",
+		"start": "concurrently yarn:start:*",
+		"migration:generate": "ts-node migration generate",
+		"migration:run": "ts-node migration run",
+		"migration:revert": "ts-node migration revert",
+		"compile-ui": "ts-node ./src/compile-admin-ui.ts"
+	},
+	"dependencies": {
+		"@aws-sdk/client-s3": "^3.370.0",
+		"@aws-sdk/lib-storage": "^3.370.0",
+		"@googlemaps/js-api-loader": "^1.16.2",
+		"@vendure/admin-ui-plugin": "^2.0.7",
+		"@vendure/asset-server-plugin": "^2.0.7",
+		"@vendure/core": "^2.0.7",
+		"@vendure/email-plugin": "^2.0.7",
+		"@vendure/ui-devkit": "^2.0.7",
+		"dotenv": "16.3.1",
+		"fs": "^0.0.1-security",
+		"pg": "8.11.1",
+		"rxjs": "^7.8.1",
+		"typescript": "4.9.5"
+	},
+	"devDependencies": {
+		"concurrently": "8.2.0",
+		"ts-node": "10.9.1"
+	}
 }
